improvement in the pdf example
